--- a/product.css
+++ b/product.css
@@ -4,156 +4,163 @@
     box-sizing: border-box;
 }
 
-html,
+:root {
+    --body-color: hsl(30, 38%, 92%);
+    --price: hsl(158, 36%, 37%);
+    --Very-dark-blue: hsl(212, 21%, 14%);
+    --Dark-grayish-blue: hsl(228, 12%, 48%);
+    --White: hsl(0, 0%, 100%);
+}
+
 body {
-    height: 100%;
-    background-color: hsl(30, 38%, 92%);
-}
-
-.container {
-    width: 600px;
-    height: 400px;
-    /* background-color: hsl(0, 0%, 100%); */
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-}
-
-/* start image */
-
-.img-container {
-    position: absolute;
-    width: 300px;
-    height: 100%;
-}
-
-.img-container img {
-    width: 300px;
-    height: 100%;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-
-/* end of the image */
-
-.product-container {
-    position: absolute;
-    left: 50%;
-    width: 300px;
-    height: 100%;
-    background-color: hsl(0, 0%, 100%);
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.product-container .perfume {
-    width: 250px;
-    font-size: 12px;
-    color: rgba(128, 128, 128, 0.712);
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
-    padding: 20px;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-
-}
-
-
-.product-container .product-name {
-    width: 250px;
-    font-size: 30px;
-    font-family: 'Fraunces', sans-serif;
-    font-weight: 700;
-    padding: 0px 20px 20px 20px;
-    color: hsl(212, 21%, 14%);
-
-}
-
-.product-container .product-details {
-    width: 250px;
-    font-size: 14px;
-    padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
-    color: hsl(228, 12%, 48%);
-}
-
-.product-container .price {
-    width: 300px;
-    padding: 10px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.product-container .new-price {
-    font-size: 30px;
-    font-family: 'Fraunces', sans-serif;
-    color: hsl(158, 36%, 37%);
-}
-
-.product-container .old-price {
-    font-family: Arial, Helvetica, sans-serif;
-    position: relative;
-    height: 20px;
-    color: hsl(228, 12%, 48%);
-    right: 30px;
-    font-weight: 700;
-    /* background-color: red; */
-}
-
-.old-price::before {
-    content: "";
-    position: absolute;
-    width: 60px;
-    height: 1px;
-    background-color: hsl(228, 12%, 48%);
-    left: 0;
-    top: calc(50% - 1px);
-
-
-}
-
-.add-to-card {
-    width: 230px;
-    height: 45px;
-    position: relative;
-    top: 5px;
-    left: 35px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    background-color: hsl(159, 36%, 17%);
-    color: white;
-    font-size: 15px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    background-color: var(--body-color);
+    font-size: 14px;
 }
 
-.add-to-card svg {
+article {
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    overflow: hidden;
+    background: var(--White);
+    margin: 20px;
+}
+
+.container>picture {
+    flex-basis: 50%;
+}
+
+.container>.card-content {
+    flex-basis: 50%;
+}
+
+/********************* 
+      picture
+*********************/
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+/********************* 
+    card content
+*********************/
+
+.card-content {
+    padding: 20px;
+}
+
+.card-content>* {
+    padding-top: 20px;
+}
+
+.card-content>span {
+    color: var(--Dark-grayish-blue);
+    font-size: 12px;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 3px;
+    font-weight: 700;
+}
+
+.card-content h1 {
+    color: var(--Very-dark-blue);
+    font-size: 35px;
+    font-family: 'Fraunces', serif;
+}
+
+.card-content p {
+    color: var(--Dark-grayish-blue);
+    font-size: 14px;
+    font-family: 'Montserrat';
+    line-height: 20px;
+    font-weight: 500;
+}
+
+.card-price {
+    display: flex;
+    align-items: center;
+    margin-bottom: 18px;
+    gap: 20px;
+}
+
+.card-price span:first-child {
+    font-size: 27px;
+    font-weight: bold;
+    font-family: 'Fraunces', serif;
+    color: var(--price);
+}
+
+.card-price span:nth-child(2) {
+    margin-left: 20px;
     position: relative;
-    left: -10px;
+    color: var(--Dark-grayish-blue);
+    font-size: 16px;
 }
 
-/* 
-font-family: 'Fraunces', serif;
-font-family: 'Montserrat', sans-serif;
-font-family: 'Outfit', sans-serif;
- */
+.card-price span:nth-child(2)::before {
+    content: "";
+    position: absolute;
+    background-color: var(--Dark-grayish-blue);
+    height: 2px;
+    width: 100%;
+    top: 50%;
+}
 
+button {
+    width: 100%;
+    box-shadow: none;
+    outline: none;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    background-color: var(--price);
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    padding: 15px;
+    transition: .5s background-color;
+    -webkit-transition: .5s background-color;
+    -moz-transition: .5s background-color;
+    -ms-transition: .5s background-color;
+    -o-transition: .5s background-color;
+}
+
+button img {
+    width: 16px;
+}
+
+button div {
+    color: var(--White);
+    text-transform: capitalize;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #1c3e32;
+    cursor: pointer;
+    transition: .5s background-color;
+    -webkit-transition: .5s background-color;
+    -moz-transition: .5s background-color;
+    -ms-transition: .5s background-color;
+    -o-transition: .5s background-color;
+}
 
 .attribution {
+    display: none;
     font-size: 11px;
     text-align: center;
     position: absolute;
@@ -166,6 +173,22 @@ font-family: 'Outfit', sans-serif;
     -o-transform: translate(-50%, 0);
 }
 
-.attribution a {
-    color: hsl(228, 45%, 44%);
+/********************* 
+media for large screen
+*********************/
+
+@media (min-width: 616px) {
+    article {
+        display: flex;
+        flex-direction: row;
+        margin: 20px;
+    }
+
+    picture img {
+        width: 300px;
+    }
+
+    .attribution {
+        display: flex;
+    }
 }
